--- a/C/OpenSSL/azure-pipelines.yml
+++ b/C/OpenSSL/azure-pipelines.yml
@@ -1,1 +1,20 @@
+name: 'whitesource-ua-azdo-c'
 
+trigger:
+- master
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
+- task: CmdLine@2
+  displayName: 'WhiteSource Scan'
+  inputs:
+    script: |
+      echo Downloading WhiteSource Unified Agent
+      curl -LJO https://github.com/whitesource/unified-agent-distribution/releases/latest/download/wss-unified-agent.jar
+      export WS_APIKEY=$(WS_ApiKey)
+      export WS_WSS_URL=$(WS_WssUrl)
+      export WS_RESOLVEALLDEPENDENCIES=false
+      echo WhiteSource Scan
+      java -jar wss-unified-agent.jar -product "$(Build.Repository.Name)" -project "$(Build.DefinitionName)"
